
- new indent feature/behavior, lp:1280982
  If an empty line was dedented deliberatly, this is
  honored by next lines indent

- info-lookup-symbol made working with Python
  patched python-info.el available at
  https://bitbucket.org/andreas_roehler/pydoc-info
  See also INSTALL-INFO-FILES

Calls to IPython are to customizable now via
`ipython-command-args'

New commands

- py-kill-shell-unconditional
  With optional argument SHELL, otherwise kill default
  (I)Python shell.

Receives a buffer-name as optional argument"
- py-info-lookup-symbol ()
  Calls `info-lookup-symbol'. Sends help if stuff is missing.

- py-toggle-split-windows-function
  If window is splitted vertically or horizontally.
  Sets customizable variable
  `py-split-windows-on-execute-function'
  Also in menu Python/Customize/Switches/Display/Which split windows

- py-symbol-at-point
  Return the Python symbol under cursor

- py-report-comint-variable-setting
  Display Py-shell' comint-mode variables of interest.

- variables-state
  Diplays state of python-mode variables in an org-mode buffer 

- py-kill-buffer-unconditional
  Kill buffer unconditional; kill also any buffer-process.

Setting docstring style simplified; a style is all needed.
  New commands:

 -py-set-nil-docstring-style
 -py-set-pep-257-nn-docstring-style
 -py-set-pep-257-docstring-style
 -py-set-django-docstring-style
 -py-set-symmetric-docstring-style
 -py-set-onetwo-docstring-style

Removed commands: 

 -toggle-py-nil-docstring-style
 -py-nil-docstring-style-on
 -py-nil-docstring-style-off
 -toggle-py-onetwo-docstring-style
 -py-onetwo-docstring-style-on
 -py-onetwo-docstring-style-off
 -toggle-py-pep-257-docstring-style
 -py-pep-257-docstring-style-on
 -py-pep-257-docstring-style-off
 -toggle-py-pep-257-nn-docstring-style
 -py-pep-257-nn-docstring-style-on
 -py-pep-257-nn-docstring-style-off
 -toggle-py-symmetric-docstring-style
 -py-symmetric-docstring-style-on
 -py-symmetric-docstring-style-off